change wash index style

--- a/gather/templates/wash/buy.html
+++ b/gather/templates/wash/buy.html
@@ -53,20 +53,18 @@
                     <img class="order-img" src="/static/img/av1.png" alt="...">
                 </a>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-4">
                 <h4 class="media-heading text-left">衬衫</h4>
                 <label class="media-heading">商务休闲长短</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading">20</label>元
                 </h4>
             </div>
-            <div class="col-xs-4 text-right">
-                <button type="button" class="btn btn-default btn-sm">
+            <div class="col-xs-5 text-right">
+                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
                   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
-                <br>
                   3
-                <br>
                 <button type="button" class="btn btn-default btn-sm">
                   <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
@@ -78,23 +76,21 @@
         <div clss="row">
             <div class="col-xs-3 text-left">
                 <a href="#">
-                    <img class="order-img" src="/static/img/av2.png" alt="...">
+                    <img class="order-img" src="/static/img/av1.png" alt="...">
                 </a>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-4">
                 <h4 class="media-heading text-left">衬衫</h4>
                 <label class="media-heading">商务休闲长短</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading">20</label>元
                 </h4>
             </div>
-            <div class="col-xs-4 text-right">
-                <button type="button" class="btn btn-default btn-sm">
+            <div class="col-xs-5 text-right">
+                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
                   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
-                <br>
                   3
-                <br>
                 <button type="button" class="btn btn-default btn-sm">
                   <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
@@ -106,23 +102,21 @@
         <div clss="row">
             <div class="col-xs-3 text-left">
                 <a href="#">
-                    <img class="order-img" src="/static/img/av3.png" alt="...">
+                    <img class="order-img" src="/static/img/av1.png" alt="...">
                 </a>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-4">
                 <h4 class="media-heading text-left">衬衫</h4>
                 <label class="media-heading">商务休闲长短</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading">20</label>元
                 </h4>
             </div>
-            <div class="col-xs-4 text-right">
-                <button type="button" class="btn btn-default btn-sm">
+            <div class="col-xs-5 text-right">
+                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
                   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
-                <br>
                   3
-                <br>
                 <button type="button" class="btn btn-default btn-sm">
                   <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
@@ -134,23 +128,21 @@
         <div clss="row">
             <div class="col-xs-3 text-left">
                 <a href="#">
-                    <img class="order-img" src="/static/img/av4.png" alt="...">
+                    <img class="order-img" src="/static/img/av1.png" alt="...">
                 </a>
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-4">
                 <h4 class="media-heading text-left">衬衫</h4>
                 <label class="media-heading">商务休闲长短</label>
                 <h4>
                     <label style="color:red">￥</label><label class="media-heading">20</label>元
                 </h4>
             </div>
-            <div class="col-xs-4 text-right">
-                <button type="button" class="btn btn-default btn-sm">
+            <div class="col-xs-5 text-right">
+                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
                   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
-                <br>
                   3
-                <br>
                 <button type="button" class="btn btn-default btn-sm">
                   <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
