update wash index style

--- a/gather/templates/wash/buy.html
+++ b/gather/templates/wash/buy.html
@@ -61,12 +61,12 @@
                 </h4>
             </div>
             <div class="col-xs-5 text-right">
-                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                <button type="button" class="btn btn-default btn-sm">
+                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
                   3
                 <button type="button" class="btn btn-default btn-sm">
-                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
             </div>
         </div>
@@ -76,7 +76,7 @@
         <div clss="row">
             <div class="col-xs-3 text-left">
                 <a href="#">
-                    <img class="order-img" src="/static/img/av1.png" alt="...">
+                    <img class="order-img" src="/static/img/av2.png" alt="...">
                 </a>
             </div>
             <div class="col-xs-4">
@@ -87,12 +87,12 @@
                 </h4>
             </div>
             <div class="col-xs-5 text-right">
-                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                <button type="button" class="btn btn-default btn-sm">
+                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
                   3
                 <button type="button" class="btn btn-default btn-sm">
-                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
             </div>
         </div>
@@ -102,7 +102,7 @@
         <div clss="row">
             <div class="col-xs-3 text-left">
                 <a href="#">
-                    <img class="order-img" src="/static/img/av1.png" alt="...">
+                    <img class="order-img" src="/static/img/av3.png" alt="...">
                 </a>
             </div>
             <div class="col-xs-4">
@@ -113,12 +113,12 @@
                 </h4>
             </div>
             <div class="col-xs-5 text-right">
-                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                <button type="button" class="btn btn-default btn-sm">
+                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
                   3
                 <button type="button" class="btn btn-default btn-sm">
-                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
             </div>
         </div>
@@ -128,7 +128,7 @@
         <div clss="row">
             <div class="col-xs-3 text-left">
                 <a href="#">
-                    <img class="order-img" src="/static/img/av1.png" alt="...">
+                    <img class="order-img" src="/static/img/av4.png" alt="...">
                 </a>
             </div>
             <div class="col-xs-4">
@@ -139,12 +139,12 @@
                 </h4>
             </div>
             <div class="col-xs-5 text-right">
-                <button type="button" class="btn btn-default btn-sm" style="margin-left:5px;">
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                <button type="button" class="btn btn-default btn-sm">
+                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
                 </button>
                   3
                 <button type="button" class="btn btn-default btn-sm">
-                  <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </button>
             </div>
         </div>
