--- a/gather/templates/wash/base.html
+++ b/gather/templates/wash/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +10,7 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
 
-    <title>我来洗衣</title>
+    <title>我来洗</title>
 
     <meta content="洗衣，o2o" name="keywords"/>
     <meta content="一站式管家服务"
@@ -17,64 +18,50 @@
     <link rel="stylesheet" type="text/css" href="http://cdn.amazeui.org/amazeui/2.4.2/css/amazeui.min.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/wash/iconfont.css?v=1.0.0"/>
     <link rel="stylesheet" type="text/css" href="/static/styles/wash/base.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/styles/bootstrap.min.css"/>
+    {% block extra_css %}
+    {% endblock %}
 
 </head>
-<body class="page  am-with-topbar-fixed-top">
+<body class="page am-with-topbar-fixed-top">
 
 <header class="am-topbar am-topbar-fixed-top am-force-show">
     <a class="titlebar-btn titlebar-city">
         <span class="current-city">北京</span>
-        <i class="am-icon-chevron-down"></i>
-        <ul class="city-list">
-            <li class="city-item">北京</li>
-            <li class="city-item">青岛</li>
-        </ul>
     </a>
-    <img class="top-logo" src="/static/images/wash/top_logo.png" width="100">
-    <a class="titlebar-btn-right" href="/intro">服务流程</a>
+    <img class="top-logo" src="{% static 'images/wash/top_logo.png' %}" width="100">
+    <a class="titlebar-btn-right" href="#">服务流程</a>
 </header>
 
 <div class="main">
-    <div class="top-banner">
-        <div data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider="{'directionNav':false}">
-            <ul class="am-slides">
-
-                <li>
-                    <img src="/static/images/wash/slider_1.jpg?_t=20150718" width="100%" height="100%">
-                </li>
-
-                <li>
-                    <img src="/static/images/wash/slider_3.jpg?_t=20150718">
-                </li>
-
-                <li>
-                    <img src="/static/images/wash/slider_2.jpg?_t=20150718">
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="order-now">
-        <a href="/order/add">
-            <b>一键下单</b>
-        </a>
-    </div>
+    {% block navbar %}
+    <ul class="nav nav-tabs text-center">
+        <li role="presentation" class="active"><a href="#">上衣</a></li>
+        <li role="presentation"><a href="#">裤子</a></li>
+        <li role="presentation"><a href="#">鞋</a></li>
+        <li role="presentation"><a href="#">床上用品</a></li>
+        <li role="presentation"><a href="#">其他</a></li>
+    </ul>
+    {% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
 
 <nav class="main-nav am-topbar am-topbar-fixed-bottom">
     <ul class="am-avg-sm-3">
-        <li class=" on">
-            <a href="/" class="item">
+        <li class="{% block index %}{% endblock %}">
+            <a href="{% url 'wash_index' %}" class="item">
                 <i class="am-icon-home am-icon-sm"></i><br/>
                 首页
             </a>
         </li>
-        <li class="  nav-middle">
-            <a href="/order/list" class="item ">
+        <li class="nav-middle {% block show %}{% endblock %}">
+            <a href="{% url 'wash_show' %}" class="item ">
                 <i class="am-icon-reorder am-icon-sm"></i><br/>
                 订单</a>
         </li>
-        <li class="">
-            <a href="/user/center" class="item">
+        <li class="{% block account %}{% endblock %}">
+            <a href="{% url 'wash_account' %}" class="item">
                 <i class="am-icon-user am-icon-sm"></i><br>
                 我的
             </a>
@@ -86,20 +73,13 @@
 <script type="text/javascript" src="http://cdn.amazeui.org/amazeui/2.4.2/js/amazeui.min.js"></script>
 <script type="text/javascript" src="/static/scripts/wash/utils.js"></script>
 <script type="text/javascript" src="/static/scripts/wash/tips.js"></script>
+<script type="text/javascript" src="/static/scripts/bootstrap.min.js"></script>
 
 <script>
-        (function(){
-            var city, $city = $('.titlebar-city');
-            var allow_city = ['北京', "青岛"];
-            $city.click(function(){
-                $('.city-list').toggle();
-            });
-            $('.city-list').on('click', '.city-item', function(e){
-                var city = $(this).text();
-                $city.find('.current-city').text(city);
-            });
-        })();
-
+    $(".nav li").click(function(){
+        $(".nav li").removeClass("active");
+        $(this).addClass("active");
+    });
 </script>
 </body>
 </html>
