--- a/gather/templates/wash/show.html
+++ b/gather/templates/wash/show.html
@@ -1,51 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta name="applicable-device" content="mobile">
-    <meta content="telephone=no,email=no" name="format-detection"/>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
-
-    <title>我来洗衣</title>
-
-    <meta content="洗衣，o2o" name="keywords"/>
-    <meta content="一站式管家服务"
-          name="description"/>
-    <link rel="stylesheet" type="text/css" href="http://cdn.amazeui.org/amazeui/2.4.2/css/amazeui.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/styles/wash/iconfont.css?v=1.0.0"/>
-    <link rel="stylesheet" type="text/css" href="/static/styles/wash/base.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/styles/bootstrap.min.css"/>
+{% extends 'wash/base.html' %}
+{% block extra_css %}
     <style>
         .order-img{
-        height:80px;
-        width:70px;
+            height:90px;
+            width:80px;
         }
-
     </style>
-</head>
-<body class="page  am-with-topbar-fixed-top">
-
-<header class="am-topbar am-topbar-fixed-top am-force-show">
-    <a class="titlebar-btn titlebar-city">
-        <span class="current-city">北京</span>
-    </a>
-    <img class="top-logo" src="/static/images/wash/top_logo.png" width="100">
-    <a class="titlebar-btn-right" href="/intro">服务流程</a>
-</header>
-
-<div class="main">
-    <ul class="nav nav-tabs text-center">
-        <li role="presentation" class="active"><a href="#">上衣</a></li>
-        <li role="presentation"><a href="#">裤子</a></li>
-        <li role="presentation"><a href="#">鞋</a></li>
-        <li role="presentation"><a href="#">床上用品</a></li>
-        <li role="presentation"><a href="#">其他</a></li>
-    </ul>
-
-
+{% endblock %}
+{% block content %}
     <div class="container-fluid" style="border-bottom:solid 1px #CCCCCC;margin-top:10px;">
         <div clss="row">
             <div class="col-xs-3 text-left">
@@ -149,45 +111,6 @@
             </div>
         </div>
     </div>
+{% endblock %}
 
-</div>
-
-<nav class="main-nav am-topbar am-topbar-fixed-bottom">
-    <ul class="am-avg-sm-3">
-        <li class=" on">
-            <a href="/" class="item">
-                <i class="am-icon-home am-icon-sm"></i><br/>
-                首页
-            </a>
-        </li>
-        <li class="  nav-middle">
-            <a href="/order/list" class="item ">
-                <i class="am-icon-reorder am-icon-sm"></i><br/>
-                购物车<span class="badge"
-                         style="position:absolute;margin-top:-30px;background:red;margin-left:-18px;">4</span></a>
-        </li>
-        <li class="">
-            <a href="/user/center" class="item">
-                <i class="am-icon-user am-icon-sm"></i><br>
-                我的
-            </a>
-        </li>
-    </ul>
-</nav>
-
-<script type="text/javascript" src="/static/scripts/jquery.min.js"></script>
-<script type="text/javascript" src="http://cdn.amazeui.org/amazeui/2.4.2/js/amazeui.min.js"></script>
-<script type="text/javascript" src="/static/scripts/wash/utils.js"></script>
-<script type="text/javascript" src="/static/scripts/wash/tips.js"></script>
-<script type="text/javascript" src="/static/scripts/bootstrap.min.js"></script>
-
-<script>
-        $("li").click(function(){
-            $("li").removeClass("active");
-            $(this).addClass("active");
-        });
-
-
-</script>
-</body>
-</html>
+{% block show %}on{% endblock %}
