--- a/gather/templates/wash/manage/discount_add.html
+++ b/gather/templates/wash/manage/discount_add.html
@@ -4,7 +4,7 @@
 <ul class="breadcrumb">
     <li>
         <i class="icon-cog"></i>
-        <a href="{% url 'manage_wash_type' %}">洗刷类型</a>
+        <a href="{% url 'manage_discount' %}">优惠券类型</a>
     </li>
     <li class="active">新增</li>
 </ul><!-- .breadcrumb -->
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="table-responsive" style="margin-top:10px;">
-            <form action="." method="post" enctype='multipart/form-data'>
+            <form action="." method="post">
                 {% csrf_token %}
                 <table class="table table-striped table-bordered table-hover">
                     <tbody>
@@ -23,30 +23,28 @@
                         <td>{{ form.name }}</td>
                     </tr>
                     <tr>
-                        <td>*现价(元)</td>
-                        <td>{{ form.new_price }}</td>
+                        <td>*优惠规格</td>
+                        <td>{{ form.price }}</td>
                     </tr>
                     <tr>
-                        <td>*原价(元)</td>
-                        <td>{{ form.old_price }}</td>
+                        <td>*优惠对象</td>
+                        <td>{{ form.wash_type }}</td>
                     </tr>
                     <tr>
-                        <td>单位</td>
-                        <td>{{ form.measure }}</td>
+                        <td>优惠类型</td>
+                        <td>{{ form.discount_type }}</td>
                     </tr>
                     <tr>
-                        <td>所属</td>
-                        <td>{{ form.belong }}</td>
-                    </tr>
-                    <tr>
-                        <td>照片</td>
+                        <td>开始时间</td>
                         <td>
-                           <input type="file" name="photo" id="upload_file"/>
+                            <input class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="begin" name="begin"/>
                         </td>
                     </tr>
                     <tr>
-                        <td>备注</td>
-                        <td><input type="text" value="无" name="mark"/></td>
+                        <td>结束时间</td>
+                        <td>
+                            <input class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="end" name="end"/>
+                        </td>
                     </tr>
 
                     </tbody>
