--- a/gather/templates/wash/base.html
+++ b/gather/templates/wash/base.html
@@ -52,8 +52,7 @@
             <a href="{% url 'wash_show' %}" class="item ">
                 <i class="am-icon-reorder am-icon-sm"></i><br/>
                 订单
-                            <span class="badge" style="position:absolute;background-color:red;margin-right:80%">14</span>
-
+                <!--<span class="badge" style="position:absolute;background-color:red;margin-right:80%">-->14</span>
             </a>
         </li>
         <li class="{% block account %}{% endblock %}">
