--- a/gather/templates/wash/manage/base.html
+++ b/gather/templates/wash/manage/base.html
@@ -81,7 +81,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="typography.html">
+							<a href="#">
 								<i class="icon-desktop"></i>
 								<span class="menu-text"> 首页轮播图 </span>
 							</a>
@@ -94,7 +94,7 @@
 						</li>
 
 						<li>
-							<a href="typography.html">
+							<a href="#">
 								<i class="icon-globe"></i>
 								<span class="menu-text"> 省市县 </span>
 							</a>
