wechat show update url

--- a/gather/templates/wash/base.html
+++ b/gather/templates/wash/base.html
@@ -51,14 +51,12 @@
             </a>
         </li>
         <li class="nav-middle {% block show %}{% endblock %}">
-            <a href="{% url 'wash_show' %}" class="item ">
+            <a href="#" class="item ">
                 <i class="am-icon-reorder am-icon-sm">
                 </i>
-
                 <br/>
                 订单
             </a>
-
         </li>
 
         <li class="{% block account %}{% endblock %}">
