--- a/gather/templates/wash/manage/base.html
+++ b/gather/templates/wash/manage/base.html
@@ -81,7 +81,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="{% url 'manage_wash_img' %}">
 								<i class="icon-desktop"></i>
 								<span class="menu-text"> 首页轮播图 </span>
 							</a>
